--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <!-- The following is a common layout you would see in an email client.
+
+    When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few 
+    rows down, all the checkboxes in-between those two checkboxes should be checked. -->
+
     <div class="inbox">
         <div class="item">
             <input type="checkbox">
