CSS [atrribute=value] Selector added

--- a/Doubts/doubts.html
+++ b/Doubts/doubts.html
@@ -55,7 +55,61 @@
         <input type="text" id="order" size="50">
         <input type="submit" value="Submit">
     </form>
+    <br>
     <hr>
+
+
+    <!-- CSS element + element Selector -->
+    <h1>CSS element + element Selector</h1>
+    <p>• The element + element selector is used to select an element that is directly after another element.</p>
+
+    <!-- EXAMPLE  -->
+    <p>• <strong>EXAMPLE ||</strong>
+        Select and stye the first p element that are placed immediately after the div elements :</p>
+    <div>
+        <h2>My name is Donald</h2>
+        <p>I live in Duckburg.</p>
+    </div>
+    <p>My best friend is Mickey.</p>
+    <p>I will not be styled.</p>
+    <hr>
+
+
+    <!-- CSS :checked Selector -->
+    <h1>CSS :checked Selector</h1>
+    <p>• The :checked selector matches every checked input element (only for radio buttons and checkboxes) and option
+        element.</p>
+
+    <!-- EXAMPLE || -->
+    <p>• <strong>EXAMPLE ||</strong>
+        Set the height and width for all checked input elements :</p>
+    <form action="">
+        <input type="radio" checked="checked" value="male" name="gender">Male<br>
+        <input type="radio" value="female" name="gender">Female<br>
+        <input type="checkbox" value="Car">I have a car
+    </form>
+    <br>
+    <hr>
+
+
+    <!-- CSS [atrribute=value] Selector -->
+    <h2>CSS [atrribute=value] Selector</h2>
+    <p>• The [attribute=value] selector is used to select elements with the specified attribute and value.</p>
+
+    <!-- EXAMPLE 1 || -->
+    <p>• <strong>EXAMPLE 1 ||</strong>
+        Style a(tag) elements with a target="_blank" :</p>
+    <a href="https://www.w3schools.com">W3Schools.com</a><br><br>
+    <a href="https://www.google.com" target="_blank">Google.com</a><br><br>
+    <a href="https://www.microsoft.com" target="_blank">Microsoft.com</a><br><br>
+
+    <!-- EXAMPLE 2 || -->
+    <p>• <strong>EXAMPLE 2 ||</strong>
+        When an input type = "text" gets focus, gradually change the width from 100px to 250px, background-color to
+        black and text-color to white :</p>
+    Search : <input type="text" name="search"><br><br>
+    <hr>
+
 
     <script src="doubts.js"></script>
 </body>
